changer les intertitres du rmarkdown

--- a/projet_session/projet_Rmd.Rmd
+++ b/projet_session/projet_Rmd.Rmd
@@ -17,41 +17,41 @@ Une fois la requête envoyé dans *Elicit*, nous avons sélectionnés les 16 pre
 ## Extraction des données
 Pour extraire nos données, nous avons utilisé le *package \rvest*. En grande partie, le processus de création du code R a été un long échange entre la fonctionnalité *R Wizard* de ChatGPT et l'IA *Perplexity.ai*. Le code que nous avons roulé pour extraire les données est le suivant:
 
-# Charger les bibliothèques nécessaires
+**Charger les bibliothèques nécessaires**
 library(rvest)
 library(dplyr)
 
-# URL de la page
+**URL de la page**
 url <- "https://www.elections.ca/content.aspx?dir=rec/part/fvt&document=p4&lang=f&section=res"
 
-# Lire le contenu HTML de la page
+**Lire le contenu HTML de la page**
 page <- read_html(url)
 
-# Extraire les lignes du tableau avec les balises "tr"
+**Extraire les lignes du tableau avec les balises "tr"**
 table_rows <- page %>%
   html_elements("tr")
 
-# Récupérer le contenu des balises "th" (en-têtes de colonnes)
+**Récupérer le contenu des balises "th" (en-têtes de colonnes)**
 headers <- table_rows %>%
   .[1] %>%
   html_elements("th") %>%
   html_text()
 
-# Extraire les données des balises "td" pour les rangées restantes
+**Extraire les données des balises "td" pour les rangées restantes**
 data <- table_rows %>%
   .[-1] %>%
   lapply(function(row) {
     row %>% html_elements("td") %>% html_text()
   })
 
-# Convertir les données en data frame
+**Convertir les données en data frame**
 df <- do.call(rbind, data) %>%
   as.data.frame(stringsAsFactors = FALSE)
 
-# Attribuer les noms de colonnes extraits
+**Attribuer les noms de colonnes extraits**
 names(df) <- headers
 
-# Nettoyer et convertir les données numériques
+**Nettoyer et convertir les données numériques**
 df_cln <- df %>%
   mutate(across(
     .cols = -1, 
