--- a/projet_session/projet_Rmd.Rmd
+++ b/projet_session/projet_Rmd.Rmd
@@ -68,6 +68,38 @@ Ce code nous a permit de créer une tableau des taux de participation des commun
 
 # Résultats
 ## Visualisation
+Nous avons fait le choix de faire deux visualisation avec les données que nous avons extraites. La première visualisation est un graphique à ligne brisée pour montrer les tendances propres aux communautés de chaque provinces. Le second graphique est un diagramme en points. Il permet d'observer la différence importante de participation entre les communautés autochtones du Québec et celle des autres provinces canadiennes. Le code que nous avons roulé pour produire ces graphiques sont les suivants:
 
+**Préparer les données**
+df_long <- df_cln %>%
+  pivot_longer(cols = -"Province/territoire", names_to = "Année", values_to = "Taux_participation")
+
+**Graphique linéaire**
+ggplot(df_long, aes(x = Année, y = Taux_participation, group = `Province/territoire`, color = `Province/territoire`)) +
+  geom_line() +
+  geom_point() +
+  theme_minimal() +
+  labs(
+    title = "Taux de participation aux élections fédérales par province (2004-2011)",
+    x = "Année", y = "Taux de participation (%)",
+    color = "Province"
+  ) +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    legend.position = "right"
+  ) +
+  scale_color_manual(values = couleurs)
+
+**Créer un graphique boxplot**
+ggplot(df_long, aes(x = Année, y = Taux_participation, group = "Province/territoire", color = "Province/territoire")) +
+  geom_line() +
+  geom_point() +
+  theme_minimal() +
+  labs(title = "Taux de participation aux élections fédérales par province (2004-2011)",
+       x = "Année", y = "Taux de participation (%)",
+       color = "Province") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.position = "right") +
+  scale_color_manual(values = "red")
 
 # Discussion
