--- a/projet_session/projet_Rmd.Rmd
+++ b/projet_session/projet_Rmd.Rmd
@@ -3,7 +3,6 @@ title: "Ce qui distingue les communautés autochtones du Québec à celles des a
 author: "William Beaudry"
 output: html_document
 date: "2024-11-16"
-bibliography: references.bib
 ---
 
 # État du savoir
@@ -13,7 +12,17 @@ La province du Québec peut représenter sur les plans sociaux et historiques un
 
 Quels facteurs ont été mobilisés par les chercheurs pour expliquer la participation électorale des membres des Premières nations aux élections fédérales ? Plusieurs rapports postélectoraux ont mobilisé une approche centrée sur les ressources socio-économiques. Celles-ci sont univoques: les différences de statut socio-économique entre les membres des Premières nations et les Allochtones expliqueraient la moitié de l'écart de participation entre ces deux groupes [@harell2010]. L'autre moitié de l'explication résiderait donc dans une expérience qui est proprement autochtone.
 
-Parmis les facteurs institutionnels, plusieurs auteurs se sont penché sur la question de la taille des circonscriptions électorales ainsi que du rôle de l'information politique fournies par les institutions électorales. La taille de l'électorat est un facteur multidimensionnel. Il peut d'abord être abordé sous l'angle du choix rationel, où les électeurs autochtones, évaluant la taille de leur communauté, choisissent ou non de voter s'ils croivent que les membres de leur communauté peuvent influencer le choix du représentant en leur faveur [@hill2010].
+Parmis les facteurs institutionnels, plusieurs auteurs se sont penché sur la question de la taille des circonscriptions électorales ainsi que du rôle de l'information politique fournies par les institutions électorales. La taille de l'électorat est un facteur multidimensionnel. Il peut d'abord être abordé sous l'angle du choix rationel, où les électeurs autochtones, évaluant la taille de leur communauté, choisissent ou non de voter s'ils croivent que les membres de leur communauté peuvent influencer le choix du représentant en leur faveur [@hill2010]. 
+
+Une autre dimension de la taille des circonscriptions, cette fois-ci faisant référence à son étendue géographique, est l'éloignement des communautés. Les électeurs éloignées de centres urbains ont une plus grande propension à être marginalisé par les partis politiques et la couverture médiatique lors de campagnes électorales étant donné des coûts de déplacement [@hill2010]. Les communautés autochtones au Québec, étant généralement loin des centres urbains, pourraient faire fasse à ce genre d'enjeux d'éloignement, tandis que dans d'autres provinces, nombre de communautés sont plus près des centres urbains.
+
+Une dernière dimension de la taille de la circonscription est sa composition démographique. Les circonscriptions électorales plus grandes en termes d'électeurs sont également plus diversifiées sur les aspects ethno-culturels. La diversité linguistiques surtout serait un facteur qui déprécient la participation électorale [@armstrong2024]. Ici, vu la plus faible proportion d'électeurs autochtones dans les circonscriptions électorales, il serait probable que l'homogénéité de la circonscription soit un facteur discriminant les Premières nations. Si le facteur linguistique semble important, Harell et al. 2010 observent une corrélation entre la langue et la participation qui va à l'encontre des attentes: des communautés qui parlent le Cri participent davantage aux élections fédérales que celles parlant l'anglais courrament [@harell2010]. Les Premières nations du Québec sont celles dont les langues traditionnelles sont les plus vivantes du pays et il en est de même pour les Nunavimmiut et l'usage de l'Inuktitut au sein de l'Inuit Nunangat. Cependant, cette relation peut être le produit de l'histoire et des contextes coloniaux propres aux différentes communautés [@harell2010]. Comme la langue seconde de nombre de communautés autochtones au Québec est l'anglais, la vie dans un espace francophone pourrait intervenir comme facteur qui déprécie la participation électorale dans la province, ce qui ne serait pas le cas dans les autres provinces.
+
+## Hypothèses
+À partir de ce très bref État du savoir, nous en venons à découler X hypothèses. D'abord, nous nous attendons que la proportion plus faible d'électeurs autochtones dans la province du Québec ait plusieurs effets qui décourage la participation électorale.
+
+*H1: l'absence de masse critique des électeurs autochtones dans les circonscriptions fédérales au Québec influence négativement la participation aux élections*
+*H2: la distance entre les communautés autochtones et les centres urbains découragent la mobilisation partisane et la saillance des élections auprès des électeurs autochtones*
 
 ## Sélection des sources bibliographiques
 Pour produire cet état du savoir, nous avons eu recours à trois outils numériques de recherche. D'abord, nous avons entré notre question de recherche dans *Perplexity.ai* afin qu'il retravaille la question dans des termes optimaux pour produire une question pour le logiciel *Elicit*. Notre question de recherche « Comment expliquer la faible participation aux élections fédérales dans les Premières Nations du Québec comparativement à celles des autres provinces entre 2004 et 2011 ? » a été traduite ainsi « What factors explain the lower voter turnout in First Nations communities in Quebec compared to other Canadian provinces in federal elections between 2004 and 2011 ? » pour faire une requête dans *Elicit*.
@@ -130,3 +139,13 @@ article{harell2010explaining,
   publisher={Wiley Online Library}
 }
 
+@article{armstrong2023exploring,
+  title={Exploring the effects of electorate size on indigenous voter turnout},
+  author={Armstrong, David A and Alcantara, Christopher and Kennedy, John},
+  journal={Politics, Groups, and Identities},
+  volume={11},
+  number={1},
+  pages={98--107},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
