rédiger la conclusion

--- a/projet_session/projet_Rmd.Rmd
+++ b/projet_session/projet_Rmd.Rmd
@@ -193,6 +193,10 @@ D'après les données que nous avons utilisées, nos hypothèses sont infirmées
 
 Quant à l'hypothèse 2, elle est également infirmée par nos résultats. Nous nous attendions à observer une relation positive entre nos deux variables dans toutes les provinces, mais plus faibles au Québec. Or, au Québec, elle est négative comme dans plusieurs autres provinces, mais elle est plus faible que plusieurs autres provinces. Ainsi, la relation entre le taux de participation et la proportion d'électeurs autochtones est plus faible que dans plusieurs autres provinces, ce à quoi nous ne nous attendions pas.
 
+En somme, une différence entre le taux de participation ne peut être attribué à la taille, et son corrolaire la proportion d'électeurs autochtones, pour expliquer le taux de participation des électeurs autochtones du Québec et du reste du Canada.
+
+Pour aller plus loin, une analyse qui souhaiterait mobiliser la taille des circonscriptions devrait inclure les variables sociodémographiques puisqu'une proportion plus élevée d'électeurs autochtones dans une circonscription sont souvent en région éloignée où les caractéristiques socioéconomiques sont différentes.
+
 # Bibliographie
 article{harell2010explaining,
   title={Explaining Aboriginal turnout in federal elections: Evidence from Alberta, Saskatchewan, and Manitoba},
